--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -12,9 +12,10 @@ config ARM64
 	select ARCH_WANT_FRAME_POINTERS
 	select ARM_AMBA
 	select ARM_ARCH_TIMER
-	select ARM_GIC
+# FIXME: temporary workaround, MT6755 has GICv2 with extensions
+#	select ARM_GIC
 	select AUDIT_ARCH_COMPAT_GENERIC
-	select ARM_GIC_V3
+#	select ARM_GIC_V3
 	select BUILDTIME_EXTABLE_SORT
 	select CLONE_BACKWARDS
 	select COMMON_CLK
