--- a/drivers/soc/mediatek/lge/Makefile
+++ b/drivers/soc/mediatek/lge/Makefile
@@ -1,5 +1,5 @@
 MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
-subdir-ccflags-y += -Werror -I$(srctree)/drivers/misc/mediatek/include
+subdir-ccflags-y += -Werror -I$(srctree)/drivers/misc/mediatek/include -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/
 
 
 obj-$(CONFIG_MACH_LGE)				+= devices_lge.o
