--- a/arch/arm64/configs/lv5_global_com_defconfig
+++ b/arch/arm64/configs/lv5_global_com_defconfig
@@ -7,7 +7,7 @@ CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
 CONFIG_ARCH_MMAP_RND_BITS_MIN=18
-CONFIG_ARCH_MMAP_RND_BITS_MAX=24
+CONFIG_ARCH_MMAP_RND_BITS_MAX=33
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_NO_IOPORT_MAP=y
@@ -29,7 +29,7 @@ CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_FIX_EARLYCON_MEM=y
-CONFIG_PGTABLE_LEVELS=3
+CONFIG_PGTABLE_LEVELS=4
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
@@ -317,9 +317,9 @@ CONFIG_ARM64_ERRATUM_855872=y
 CONFIG_ARM64_ERRATUM_855873=y
 CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_64K_PAGES is not set
-CONFIG_ARM64_VA_BITS_39=y
-# CONFIG_ARM64_VA_BITS_48 is not set
-CONFIG_ARM64_VA_BITS=39
+# CONFIG_ARM64_VA_BITS_39 is not set
+CONFIG_ARM64_VA_BITS_48=y
+CONFIG_ARM64_VA_BITS=48
 # CONFIG_CPU_BIG_ENDIAN is not set
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
@@ -2216,11 +2216,13 @@ CONFIG_UNIX98_PTYS=y
 #
 # Serial drivers
 #
+# CONFIG_SERIAL_EARLYCON is not set
 # CONFIG_SERIAL_8250 is not set
 
 #
 # Non-8250 serial port support
 #
+# CONFIG_SERIAL_EARLYCON_MT6755 is not set
 # CONFIG_SERIAL_AMBA_PL010 is not set
 # CONFIG_SERIAL_AMBA_PL011 is not set
 # CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST is not set
