--- a/drivers/misc/mediatek/irq/Kconfig
+++ b/drivers/misc/mediatek/irq/Kconfig
@@ -1,5 +1,6 @@
 config MTK_IRQ
 	bool "Enable MTK interrupt controller for 32-bit kernel"
+	depends on ARM
 	help
 		It decides whether the system uses MTK interrupt controller
 		for 32-bit kernel; which forwards IRQs to target CPU, and
