enable CONFIG_MTK_PSCI to make SMP work, enable KGDB and KDB

--- a/arch/arm64/configs/lv5_global_com_defconfig
+++ b/arch/arm64/configs/lv5_global_com_defconfig
@@ -286,7 +286,7 @@ CONFIG_ARCH_MT6755=y
 #
 # MTK Board Support Package
 #
-# CONFIG_MTK_PSCI is not set
+CONFIG_MTK_PSCI=y
 
 #
 # Bus support
@@ -1544,7 +1544,6 @@ CONFIG_MTK_GPIO=y
 CONFIG_MTK_I2C=y
 CONFIG_MTK_I2C_EXTENSION=y
 # CONFIG_MTK_IR_LEARNING_SUPPORT is not set
-# CONFIG_MTK_IRQ is not set
 # CONFIG_MTK_IRTX_SUPPORT is not set
 # CONFIG_MTK_IRTX_PWM_SUPPORT is not set
 CONFIG_MTK_LEDS=y
@@ -1603,7 +1602,7 @@ CONFIG_MTK_SERIAL_CONSOLE=y
 # CONFIG_USB_MTK_HDRC is not set
 CONFIG_MTK_MUSB_QMU_SUPPORT=y
 # CONFIG_USB_MTK_OTG is not set
-# CONFIG_MTK_UART_USB_SWITCH is not set
+CONFIG_MTK_UART_USB_SWITCH=y
 # CONFIG_MTK_MUSB_CARPLAY_SUPPORT is not set
 # CONFIG_MTK_MUSB_SW_WITCH_MODE is not set
 # CONFIG_USB_MTK_OTG_SWITCH is not set
@@ -2216,7 +2215,6 @@ CONFIG_UNIX98_PTYS=y
 #
 # Serial drivers
 #
-# CONFIG_SERIAL_EARLYCON is not set
 # CONFIG_SERIAL_8250 is not set
 
 #
@@ -2226,10 +2224,12 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_AMBA_PL010 is not set
 # CONFIG_SERIAL_AMBA_PL011 is not set
 # CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST is not set
+# CONFIG_SERIAL_KGDB_NMI is not set
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
+CONFIG_CONSOLE_POLL=y
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -4141,7 +4141,11 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
-# CONFIG_KGDB is not set
+CONFIG_KGDB=y
+CONFIG_KGDB_SERIAL_CONSOLE=y
+# CONFIG_KGDB_TESTS is not set
+CONFIG_KGDB_KDB=y
+CONFIG_KDB_CONTINUE_CATASTROPHIC=0
 # CONFIG_ARM64_PTDUMP is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
