Enable arm32 compatibility

--- a/arch/arm64/configs/lv5_global_com_defconfig
+++ b/arch/arm64/configs/lv5_global_com_defconfig
@@ -140,9 +140,11 @@ CONFIG_RD_LZ4=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
+CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_BPF=y
 CONFIG_EXPERT=y
+CONFIG_UID16=y
 # CONFIG_SGETMASK_SYSCALL is not set
 CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
@@ -209,7 +211,11 @@ CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=18
+CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
 CONFIG_CLONE_BACKWARDS=y
+CONFIG_OLD_SIGSUSPEND3=y
+CONFIG_COMPAT_OLD_SIGACTION=y
 
 #
 # GCOV-based kernel profiling
@@ -247,6 +253,7 @@ CONFIG_BLOCK=y
 # CONFIG_PARTITION_ADVANCED is not set
 CONFIG_MSDOS_PARTITION=y
 CONFIG_EFI_PARTITION=y
+CONFIG_BLOCK_COMPAT=y
 
 #
 # IO Schedulers
@@ -380,6 +387,7 @@ CONFIG_HSWAP=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+# CONFIG_ARMV8_DEPRECATED is not set
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
 
 #
@@ -406,13 +414,14 @@ CONFIG_DMI=y
 # Userspace binary formats
 #
 CONFIG_BINFMT_ELF=y
+CONFIG_COMPAT_BINFMT_ELF=y
 CONFIG_ARCH_BINFMT_ELF_RANDOMIZE_PIE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_BINFMT_SCRIPT=y
 # CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
-# CONFIG_COMPAT is not set
+CONFIG_COMPAT=y
 
 #
 # Power management options
@@ -483,6 +492,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 #
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_NET=y
+CONFIG_COMPAT_NETLINK_MESSAGES=y
 
 #
 # Networking options
@@ -1706,6 +1716,7 @@ CONFIG_MT_CPU_AFFINITY=y
 #
 CONFIG_MT_LOAD_BALANCE_ENHANCEMENT=y
 # CONFIG_MT_RT_SCHED is not set
+# CONFIG_MTK_COMPAT is not set
 CONFIG_MT_SCHED_INTEROP=y
 # CONFIG_MT_SCHED_TRACE is not set
 # CONFIG_MT_DEBUG_PREEMPT is not set
@@ -4341,6 +4352,7 @@ CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_AUDIT_GENERIC=y
 CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
+CONFIG_AUDIT_COMPAT_GENERIC=y
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
