--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -21,8 +21,9 @@ config ANDROID_BINDER_IPC
 
 config ANDROID_BINDER_IPC_32BIT
 	bool
-	depends on !64BIT && ANDROID_BINDER_IPC
-	default y
+	prompt "Legacy 32bit binder API support" if 64BIT
+	default y if !64BIT
+	depends on ANDROID_BINDER_IPC
 	---help---
 	  The Binder API has been changed to support both 32 and 64bit
 	  applications in a mixed environment.
