This commit includes following changes:  - defconfig has been updated to allow booting stock 32-bit Android on 64-bit kernel  - Binder uses now legacy 32-bit API for compatibility with 32-bit userland  - exFAT, Wi-fi, BT and GPS drivers are now enabled by default  - dtb has been updated with addresses of GICV and GICH  - some messages are turned from error into debug messages, to prevent    them from flooding dmesg, these can be re-enabled at runtime using    Linux's Dynamic Debug functionality  - experimental support for KVM has been added

--- a/arch/arm64/boot/dts/mt6755.dts
+++ b/arch/arm64/boot/dts/mt6755.dts
@@ -310,8 +310,12 @@
 		#address-cells = <0>;
 		interrupt-controller;
 		reg = <0 0x10231000 0 0x1000>,
-		      <0 0x10232000 0 0x1000>,
+		      <0 0x10232000 0 0x2000>,
+		      <0 0x10234000 0 0x2000>,
+		      <0 0x10236000 0 0x2000>,
 		      <0 0x10200620 0 0x1000>;
+		interrupts = <GIC_PPI 9
+				(GIC_CPU_MASK_SIMPLE(8) | IRQ_TYPE_LEVEL_HIGH)>;
 	};
 
 	cpuxgpt@10200000 {
@@ -342,10 +346,14 @@
 
 	timer {
 		compatible = "arm,armv8-timer";
-		interrupts = <GIC_PPI 13 IRQ_TYPE_LEVEL_LOW>,
-				<GIC_PPI 14 IRQ_TYPE_LEVEL_LOW>,
-				<GIC_PPI 11 IRQ_TYPE_LEVEL_LOW>,
-				<GIC_PPI 10 IRQ_TYPE_LEVEL_LOW>;
+		interrupts = <GIC_PPI 13
+				(GIC_CPU_MASK_SIMPLE(8) | IRQ_TYPE_LEVEL_LOW)>,
+				<GIC_PPI 14
+				(GIC_CPU_MASK_SIMPLE(8) | IRQ_TYPE_LEVEL_LOW)>,
+				<GIC_PPI 11
+				(GIC_CPU_MASK_SIMPLE(8) | IRQ_TYPE_LEVEL_LOW)>,
+				<GIC_PPI 10
+				(GIC_CPU_MASK_SIMPLE(8) | IRQ_TYPE_LEVEL_LOW)>;
 		clock-frequency = <13000000>;
 		};
 
