--- a/arch/arm64/configs/lv5_global_com_defconfig
+++ b/arch/arm64/configs/lv5_global_com_defconfig
@@ -62,6 +62,7 @@ CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN=y
+CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
 CONFIG_IRQ_DOMAIN_DEBUG=y
 CONFIG_SPARSE_IRQ=y
@@ -265,6 +266,7 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_PREEMPT_NOTIFIERS=y
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -364,6 +366,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 # CONFIG_BOUNCE is not set
+CONFIG_MMU_NOTIFIER=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
@@ -2231,7 +2234,6 @@ CONFIG_UNIX98_PTYS=y
 #
 # Non-8250 serial port support
 #
-# CONFIG_SERIAL_EARLYCON_MT6755 is not set
 # CONFIG_SERIAL_AMBA_PL010 is not set
 # CONFIG_SERIAL_AMBA_PL011 is not set
 # CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST is not set
@@ -3629,6 +3631,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ASHMEM=y
@@ -3779,6 +3782,8 @@ CONFIG_LGE_DM_VERITY_RECOVERY=y
 # CONFIG_IIO is not set
 # CONFIG_PWM is not set
 CONFIG_IRQCHIP=y
+CONFIG_ARM_GIC=y
+CONFIG_ARM_GIC_V3=y
 CONFIG_MTK_GIC=y
 CONFIG_MTK_EIC=y
 CONFIG_MTK_SEC_DEINT_SUPPORT=y
@@ -3877,6 +3882,14 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_EXFAT_VIRTUAL_XATTR=y
+CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:exfat:s0"
+# CONFIG_EXFAT_DEBUG is not set
+# CONFIG_EXFAT_UEVENT is not set
+CONFIG_EXFAT_AS_TEXFAT=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -3985,7 +3998,15 @@ CONFIG_NLS_UTF8=y
 # CONFIG_RAWFS_FS is not set
 # CONFIG_YAFFS_FS is not set
 CONFIG_LGE_SREADAHEAD=y
-# CONFIG_VIRTUALIZATION is not set
+CONFIG_HAVE_KVM_IRQCHIP=y
+CONFIG_KVM_MMIO=y
+CONFIG_HAVE_KVM_CPU_RELAX_INTERCEPT=y
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
+CONFIG_KVM_ARM_HOST=y
+CONFIG_KVM_ARM_MAX_VCPUS=8
+CONFIG_KVM_ARM_VGIC=y
+CONFIG_KVM_ARM_TIMER=y
 
 #
 # Kernel hacking
